--- a/__versions/_version_1_start/CMakeLists.txt
+++ b/__versions/_version_1_start/CMakeLists.txt
@@ -1,11 +1,4 @@
 
-# clear the screen
-if(UNIX)
-    execute_process(COMMAND clear)
-elseif(WIN32)
-    execute_process(COMMAND cmd /c cls)
-endif()
-
 # 1. Check system requirements
 
 ## 1.1 Check CMake version and define the project
@@ -14,22 +7,16 @@ cmake_minimum_required(VERSION 3.20)
 project(RTSAI)
 
 # Remove previous cache
-file(GLOB_RECURSE REMOVED_FILES
-    ${CMAKE_BINARY_DIR}/Makefile
-    ${CMAKE_BINARY_DIR}/cmake_install.cmake
-    ${CMAKE_BINARY_DIR}/CMakeCache.txt
-)
-foreach(FILE ${REMOVED_FILES})
-    file(REMOVE ${FILE})
-endforeach()
-# file(REMOVE_RECURSE ${CMAKE_BINARY_DIR}/CMakeFiles/)
+file(GLOB_RECURSE REMOVED_FILES ${CMAKE_BINARY_DIR}/CMakeFiles)
+file(GLOB_RECURSE REMOVED_FILES ${CMAKE_BINARY_DIR}/cmake_install.cmake)
+file(GLOB_RECURSE REMOVED_FILES ${CMAKE_BINARY_DIR}/CMakeCache.txt)
+file (REMOVE ${REMOVED_FILES})
+file(REMOVE_RECURSE ${CMAKE_BINARY_DIR}/Makefile)
 message(STATUS "Cleaning cmake build files")
 
 ## 1.2 Check Python version >= 3.12
 
-set(CMAKE_FIND_FRAMEWORK NEVER)
-
-find_package(Python3 3.12 REQUIRED COMPONENTS Interpreter Development)
+find_package(Python3 REQUIRED)
 
 # Find Python
 if (Python3_FOUND)
@@ -41,7 +28,7 @@ if (Python3_FOUND)
 
     if (Python3_VERSION_MAJOR GREATER_EQUAL 3 AND Python3_VERSION_MINOR GREATER_EQUAL 12)
         message(STATUS "Requirement: Python version >= 3.12 : SATISFIED.")
-        set(CMAKE_Python3_LINK_EXECUTABLE "${CMAKE_Python3_LINK_EXECUTABLE}")
+        set(LINK_EXECUTABLE ${PYTHON3_EXECUTABLE})
     else()
         message(FATAL_ERROR "Requirement: Python version >= 3.12 : NOT SATISFIED. Please install Python 3.12 or a higher version.")
     endif()
@@ -52,8 +39,13 @@ else()
 
 endif()
 
+# Source Files
+set(SOURCES
+    src/RTSAI_Core.py
+)
+
 # Executable Target
-add_executable(RTSAI src/RTSAI_Core.py)
+add_executable(RTSAI ${SOURCES})
 
 # Set the appropriate Python interpreter as the target
 set_target_properties(RTSAI PROPERTIES LINKER_LANGUAGE Python3)
