development : install RTSAI

--- a/__versions/_version_4_first_command/Makefile
+++ b/__versions/_version_4_first_command/Makefile
@@ -6,13 +6,9 @@ PYTHON := python3
 # Directories
 SRC_DIR := src
 BIN_DIR := bin
-DATA_DIR := src/data
-RTSAI_DIR := /usr/local/RTSAI
-RTSAI_DATA_DIR := $(RTSAI_DIR)/data
-RTSAI_ENV_DIR := $(RTSAI_DIR)/environments
 
 # Files
-PY_FILE := $(SRC_DIR)/codes/RTSAI_Core.py
+PY_FILE := $(SRC_DIR)/RTSAI_Core.py
 EXE_FILE := $(BIN_DIR)/RTSAI
 
 # Build and install target
@@ -22,14 +18,9 @@ install: $(PY_FILE)
 	@cat $(PY_FILE) >> $(EXE_FILE)
 	@chmod +x $(EXE_FILE)
 	@echo "Executable created: $(EXE_FILE)"
-	@echo "Installing RTSAI ... (password may be required to modify /usr/local)"
-	@sudo mkdir -p $(RTSAI_DIR)
-	@mkdir -p $(RTSAI_DATA_DIR)
-	@cp -r $(DATA_DIR) $(RTSAI_DATA_DIR)
-	@mkdir -p $(RTSAI_ENV_DIR)/default
+	@echo "Installing RTSAI..."
+	@cp $(EXE_FILE) /usr/local/bin/RTSAI
 	@echo "RTSAI installed successfully!"
 
 clean:
-	rm -rf $(BIN_DIR) $(RTSAI_DIR)
-
-.PHONY: install clean
+	rm -rf $(BIN_DIR)
